Add spell checker and additional extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,8 @@
         "ms-python.python",
         "redhat.ansible",
         "redhat.vscode-openshift-connector",
-        "ms-python.black-formatter"
+        "ms-python.black-formatter",
+        "streetsidesoftware.code-spell-checker",
+		"johnpapa.winteriscoming"
     ]
 }
