Update VSCode settings with themes and auto-save
Added color theme settings and editor preferences.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,10 @@
     "ansible.completion.provideRedirectModules": true,
     "ansible.validation.enabled": true,
     "ansible.validation.lint.enabled": true,
-    "ansible.validation.lint.path": "/usr/local/bin/ansible-lint"
+    "ansible.validation.lint.path": "/usr/local/bin/ansible-lint",
+    "workbench.colorTheme": "Winter is Coming (Dark Blue)",
+	"workbench.preferredDarkColorTheme": "Winter is Coming (Dark Blue)",
+	"workbench.preferredLightColorTheme": "Winter is Coming (Light)",
+	"editor.wordWrap": "on",
+	"files.autoSave": "on"
 }
